@@ -1,5 +1,28 @@
 <?php
 
+/***************************************************************
+ *  Copyright notice
+ *
+ *  (c) 2012 CERDAN Yohann (cerdanyohann@yahoo.fr)
+ *  All rights reserved
+ *
+ *  This script is part of the TYPO3 project. The TYPO3 project is
+ *  free software; you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation; either version 2 of the License, or
+ *  (at your option) any later version.
+ *
+ *  The GNU General Public License can be found at
+ *  http://www.gnu.org/copyleft/gpl.html.
+ *
+ *  This script is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details.
+ *
+ *  This copyright notice MUST APPEAR in all copies of the script!
+ ***************************************************************/
+
 class tx_additionalscheduler_utils
 {
 	/**
@@ -9,12 +32,13 @@ class tx_additionalscheduler_utils
 	 */
 
 	public function getTasksList() {
-		$tasks = array('savewebsite', 'translationupdate', 'exec', 'clearcache');
+		$tasks = array('savewebsite', 'translationupdate', 'exec', 'clearcache', 'cleart3temp');
 		return $tasks;
 	}
 
 	/**
-	 * Send a email using t3lib_htmlmail
+	 * Send a email using t3lib_htmlmail or the new swift mailer
+	 * It depends on the TYPO3 version
 	 */
 
 	public function sendEmail($to, $subject, $message, $type = 'plain', $fromEmail = '', $fromName = '', $charset = 'utf-8', $files = array()) {
